--- a/styles/style.css
+++ b/styles/style.css
@@ -9,4 +9,26 @@ body{
 
 header{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#title {
+    flex-direction: column;
+    line-height: 10px;
+}
+
+li{
+    display: inline-block;
+}
+
+h1 {
+    font-weight: 200;
+}
+
+main{
+    display: flex;
+    flex-direction: row;
+    margin: 50px;
 }
