--- a/styles/style.css
+++ b/styles/style.css
@@ -80,4 +80,26 @@ img {
 form {
     display: flex;
     flex-direction: column;
+    width: 70%;
+}
+
+form [type = "submit"]{
+    height: 50px;
+    width: 50%;
+    background-color: rgb(132, 14, 201);
+    color: white;
+    font-weight: bold;
+}
+
+form [type = "submit"]:hover{
+    cursor: pointer;
+}
+
+input {
+    margin-top: 15px;
+    height: 20px;
+    padding: 15px;
+    border-radius: 20px;
+    border: none;
+    font-size: 15px;
 }
